2.18.0
 - BREAKING CHANGE: set default viscosity model for Young's modulus
   computation to "buyukurganci-2022", because it is more accurate
   and also because it is defined for the "0.83% MC-PBS" medium
 - setup: bump dclab to 0.60.5 (fix basin-based array access, export from
   datasets with internal basins)
2.17.0
 - setup: bump dclab to 0.60.0 (internal basin support, export logs)
2.16.5
 - setup: bump dclab to 0.59.1 (mapped-basin now fully supported)
2.16.4
 - setup: bump dclab to 0.59.0 (improved support for basin features)
2.16.3
 - maintenance release
2.16.2
 - fix: data export feature selection must default to features_loaded
 - enh: only show local features in QuickView Event Feature tab
 - enh: show dcnum pipeline identifiers in Analysis view
 - enh: add section:key tool tips for analysis view metadata
 - enh: added links to docs explaining default export selection
 - docs: remove Shape-Out 1 reference
 - setup: remove rpy2 from dependencies until #161 is fixed
 - setup: migrate from setup.py to pyproject.toml
 - setup: bump dclab to 0.58.7 (performance)
2.16.1
 - setup: bump dclab to 0.58.4 (reduced memory usage when computing
   contour-based features such as volume, export dataset configuration
   as metadata in .tsv export, support both posix and nt relative basin
   paths)
2.16.0
 - feat: enable storage strategy (basin control) in export dialog (#159)
 - fix: ask for .tsv output path before computing statistics
 - enh: color feature data in QuickView combobox according to availability
 - enh: hide basinmap features in scatter plot selections (#159)
 - docs: remove reference to Shape-Out 1 in introduction
 - docs: mention basins and link to dclab (#159)
 - docs: add quick guide for data export
 - ref: reduce usage of `dclab.dfn.scalar_feature_names` (#108)
 - setup: bump dclab to 0.58.2
2.15.5
 - fix: right-click menu not working for plot widgets (#160)
 - ref: introduce `FeatureComboBox` class for listing features
2.15.4