@@ -2,6 +2,7 @@
  - BREAKING CHANGE: set default viscosity model for Young's modulus
    computation to "buyukurganci-2022", because it is more accurate
    and also because it is defined for the "0.83% MC-PBS" medium
+ - fix: remove leading/trailing slashes for DCOR servers
  - setup: bump dclab to 0.60.5 (fix basin-based array access, export from
    datasets with internal basins)
 2.17.0
